displaying logs and adding channel model to be able to separate the channel logs to different view

--- a/web/views/index.hbs
+++ b/web/views/index.hbs
@@ -1,2 +1,5 @@
-
-    Welcome to the IrcBot WebApp :)
+<div id="logs-container">
+{{#each _logs}}
+    <div class="log-item">{{nick}} - {{message}} - {{date}}</div>
+{{/each}}
+</div>
