--- a/web/views/layouts/main.hbs
+++ b/web/views/layouts/main.hbs
@@ -3,10 +3,18 @@
 <head>
     <meta charset="utf-8">
     <title>IrcBot App</title>
+    <link rel="stylesheet" type="text/css" href="/styles/main.css"/>
 </head>
 <body>
+    {{> header}}
 
-{{{body}}}
+    <!-- content -->
+    <div class="content">
+        {{{body}}}
+    </div>
+
+    {{> footer}}
+    {{> scripts}}
 
 </body>
 </html>
