fixing #13, error in logs savings

--- a/web/public/styles/main.scss
+++ b/web/public/styles/main.scss
@@ -44,6 +44,10 @@ header {
   background: rgba(0, 0, 0, 0.05);
 }
 
+.bg-norm {
+  background: white;
+}
+
 .log-item {
   padding: 5px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
