Implementing basic authentication for the application

--- a/web/views/index.hbs
+++ b/web/views/index.hbs
@@ -1,5 +1,5 @@
 
-<div id="logs-container">
+<div id="logs-container container-fluid">
 {{#each _logs}}
     <div class="log-item row {{_even @index}}">
         <div class="col-md-1 nick">{{nick}}</div><div class="col-md-8 message">{{message}}</div><div class="col-md-3 date">{{date}}</div>
