--- a/web/views/login.hbs
+++ b/web/views/login.hbs
@@ -1,3 +1,9 @@
+{#if error}
+    <div class="error-container">
+        {{error}}
+    </div>
+{/if}
+
 <div class="login-form-container">
 <h1>Login</h1>
 
