--- a/web/views/login.hbs
+++ b/web/views/login.hbs
@@ -1,8 +1,8 @@
-{#if error}
+{{#if error}}
     <div class="error-container">
         {{error}}
     </div>
-{/if}
+{{/if}}
 
 <div class="login-form-container">
 <h1>Login</h1>
